[gd_scene load_steps=3 format=2]

[ext_resource path="res://FadeRectBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://outro.gd" type="Script" id=2]

[node name="Outro" type="Node2D"]
script = ExtResource( 2 )

[node name="FadeRectBackground" parent="." instance=ExtResource( 1 )]

[node name="AudioStream" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 949.279, 553.04 )

[connection signal="animation_finished" from="FadeRectBackground" to="." method="_on_FadeRectBackground_animation_finished"]
